se arregla bug con respecto al show de los anuncios inactivos

--- a/app/views/includes/_galeria.erb
+++ b/app/views/includes/_galeria.erb
@@ -1,4 +1,4 @@
-
+<% if object %>
   <div class="col-xs-12 col-sm-6 col-md-7 gallery-holder">
     <div class="product-item-holder size-big single-product-gallery small-gallery">
 
@@ -121,3 +121,4 @@
 
     </div><!-- /.single-product-gallery -->
   </div><!-- /.gallery-holder -->
+<% end %>
