--- a/app/views/admin/extras/_resultTable.erb
+++ b/app/views/admin/extras/_resultTable.erb
@@ -1,11 +1,12 @@
 <table class="table table-bordered table-hover table-striped">
   <thead>
   <tr>
-    <th>NIT</th>
+    <th>#</th>
     <th>Nombre</th>
     <th>Tipo</th>
     <th>Repuestos</th>
-    <th>Departamento</th>
+    <th>Fecha de creacion</th>
+    <th>Fecha de activacion</th>    
     <th>Acciones</th>
     <th>Estado</th>
   </tr>
@@ -15,7 +16,7 @@
       <tr>
 
         <td>
-          <%= extra.nit %>
+          <%= extra.id %>
         </td>
 
         <td>
@@ -39,10 +40,12 @@
         </td>
 
         <td>
-          <%= extra.state.name if extra.state %>
+          <%= extra.created_at.strftime('%b %d del %Y') %>
         </td>
-
         <td>
+          <%= extra.updated_at.strftime('%b %d del %Y') %>
+        <td>
+
           <% if extra.active == 1 %>
             <%= link_to 'Editar', edit_admin_extra_path(extra.id), :class=>'btn btn-info' %>
             <%= link_to 'Eliminar', {:controller => 'extras', :action => 'destroy', :id => extra.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
