--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -39,10 +39,12 @@
       <table class="table table-bordered table-hover table-striped">
         <thead>
         <tr>
-          <th>NIT</th>
+          <th>#</th>
           <th>Nombre</th>
           <th>Tipo</th>
           <th>Repuestos</th>
+          <th>Fecha de creacion</th>
+          <th>Fecha de activacion</th>    
           <th>Acciones</th>
           <th>Estado</th>
         </tr>
@@ -50,21 +52,22 @@
         <tbody>
         <% @extras.each do |extra| %>
             <tr>
+
               <td>
-                <%= extra.nit %>
+                <%= extra.id %>
               </td>
+
               <td>
                 <%= extra.name %>
               </td>
-              
+
               <td>
                 <% if extra.type_trucks %>
                   <% extra.type_trucks.each do |truck| %>
                     <%= truck.name %>
                   <% end %>
                 <% end %>
-              </td> 
-
+              </td>
 
               <td>
                 <% if extra.brand_extras %>
@@ -75,34 +78,34 @@
               </td>
 
               <td>
+                <%= extra.created_at.strftime('%b %d del %Y') %>
+              </td>
+              <td>
+                <%= extra.updated_at.strftime('%b %d del %Y') %>
+              <td>
+
                 <% if extra.active == 1 %>
                   <%= link_to 'Editar', mirepuestosedit_path(extra.id), :class=>'btn btn-info' %>
                 <% end %>
               </td>
 
+
               <td>
-
-                <% if extra.active == 1 %>
-                   <%= link_to  "/estatus-update/extra/#{extra.id}", :class=>'btn btn-success' do %>
-                     <i class="fa fa-times"></i>
-                   <% end %>
-                <% elsif extra.active == 0 %>
-                   <%= link_to  "/estatus-update/extra/#{extra.id}", :class=>'btn btn-danger' do %>
-                     <i class="fa fa-check"></i>
-                   <% end %>
-                <% elsif extra.active == 3 %>
-                   Inactivo por el admin
-                <% end %>
-
+                    <% if extra.active == 1 %>
+                       <%= link_to  "/estatus-update/extra/#{extra.id}", :class=>'btn btn-success' do %>
+                         <i class="fa fa-times"></i>
+                       <% end %>
+                    <% elsif extra.active == 0 %>
+                       <%= link_to  "/estatus-update/extra/#{extra.id}", :class=>'btn btn-danger' do %>
+                         <i class="fa fa-check"></i>
+                       <% end %>
+                    <% elsif extra.active == 3 %>
+                       Inactivo por el admin
+                    <% end %>
               </td>
-
-            </tr>
-        <% end %>
-
-
+            </tr>    
+          <% end %>
         </tbody>
-
-
 
       </table>
     </div>
@@ -111,6 +114,3 @@
 
   </div>
 </div>
-
-
-
