--- a/app/views/customer/customer_mailer/inactive_service_for_system.html.erb
+++ b/app/views/customer/customer_mailer/inactive_service_for_system.html.erb
@@ -53,7 +53,7 @@ a{
     <div style="float:left;background-color:#FFF;width:100%;margin-top-5px;border-radius: 10px;padding: 20px;">
       <h2><%= "Servicio caducado" %></h2>
       <p><%= "Estimado sr(a) #{@customer.name.capitalize} le infomamos que su servicio con
-              nombre #{@service.name} a caducado si desea activarlo nuevamente por favor comunicarse con el Administrador del sistema a través 
+              nombre #{@object.name} a caducado si desea activarlo nuevamente por favor comunicarse con el Administrador del sistema a través 
                 de este correo #{Environment::FROM_MAIL}"%></p>
     </div>
     </td>
