--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -10,7 +10,7 @@
             info@camion365.com
         .cnt-block
           %ul.list-unstyled.list-inline
-            - if session[:user]
+            - if current_customer
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => logout_sessions_path } Cerrar sesion
               %li.dropdown.dropdown-small
