--- a/app/views/layouts/pdf.html
+++ b/app/views/layouts/pdf.html
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <%= wicked_pdf_stylesheet_link_tag "bootstrap.min" -%>
-    <%= wicked_pdf_stylesheet_link_tag "application" -%>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
+    <%= wicked_pdf_stylesheet_link_tag "bootstrap.min" %>
     <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body onload='number_pages'>
     <div id="header">
-      <%#= wicked_pdf_image_tag 'mysite.jpg' %>
+      <%= wicked_pdf_image_tag 'logo.png' %>
     </div>
     <div id="content">
       <%= yield %>
