--- a/app/views/admin/trucks/export.pdf.haml
+++ b/app/views/admin/trucks/export.pdf.haml
@@ -1,13 +1,16 @@
-%table.table
+%hr
+%center
+  %span
+    %h1 LISTA DE VEHICULOS
+%table.table.table-striped
   %thead
-    %th
-      %tr
-        %th #
-        %th Nombre
-        %th Precio
-        %th Tipo
-        %th Marca
-        %th Departamento
+    %tr.success
+      %th #
+      %th Nombre
+      %th Precio
+      %th Tipo
+      %th Marca
+      %th Departamento
   %tbody
     - @trucks.each do |truck|
       %tr
