se agrega el suscribete en las vistas

--- a/app/views/includes/_footer.erb
+++ b/app/views/includes/_footer.erb
@@ -4,6 +4,29 @@
   <div class="links-social">
     <div class="container">
       <div class="row">
+      
+        <!--NUEVO DIV-->
+        <div class="col-xs-12 col-sm-12 col-md-12 box-suscri">
+          
+          <div class="col-xs-12 col-sm-4 col-md-4"><h1>Suscribete - Boletín de Noticias</h1></div>
+          
+          <div class="col-xs-12 col-sm-8 col-md-8">
+        <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        </style>
+          <form class="register-form validate" role="form" action="//camion365.us12.list-manage.com/subscribe/post?u=c75504c717f494f2e3aef179e&amp;id=5feceeebd4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+          <div class="form-group">
+          <!--<label class="info-title" for="exampleOrderId1">Nombre</label>-->
+          <input class="form-control unicase-form-control text-input" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Ingrese su email..." required> 
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_c75504c717f494f2e3aef179e_5feceeebd4" tabindex="-1" value=""></div>
+            <div class="clear btn-suscibe"><input type="submit" value="ENVIAR" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+          </form>
+            </div>
+        </div><!--NUEVO DIV-->
+
         <div class="col-xs-12 col-sm-6 col-md-3">
           <!-- ============================================================= CONTACT INFO ============================================================= -->
           <div class="contact-info">
@@ -31,7 +54,7 @@
             </div><!-- /.module-heading -->
 
             <div class="module-body">
-              <p>Camion365.com  - Todos los drechos reservados Copyright © 2015</p>
+              <p>Camion365.com  - Todos los derechos reservados Copyright © 2015</p>
             </div><!-- /.module-body -->
           </div><!-- /.contact-timing -->
           <!-- ============================================================= CONTACT TIMING : END ============================================================= -->            	</div><!-- /.col -->
