--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5349,3 +5349,38 @@ a {
   font-size: 16px;
   margin-bottom: 10px;
 }
+
+/************** nuevo **************/
+
+footer{
+  margin-top: 50px !important;
+}
+.box-suscri{
+  border-bottom: 1px solid rgb(204, 204, 204);
+  margin-bottom: 50px;
+}
+
+.box-suscri h1{
+  color: #444;
+  font-size: 20px;
+  text-align: left;
+}
+.box-suscri input{
+  width: 70%;
+  padding: 10px;
+}
+.btn-suscibe input{
+  background-color: #FAB115;
+  color: #444;
+  text-align: center;
+  font-size: 20px;
+  text-align: center;
+  padding:10px 30px;
+  width: 30%;
+  float: right;
+  border-style: none;
+  border-radius: 5px;
+  margin: -40px 0 0 0; 
+}
+
+/************** nuevo **************/
