--- a/app/views/layouts/header_trucks.pdf.haml
+++ b/app/views/layouts/header_trucks.pdf.haml
@@ -1,13 +1,16 @@
-%table
-  %tr
-    %td= wicked_pdf_image_tag 'logo.png'
-    %td
-    %td
-    %td
-    %td
-    %td
-    %td
-      %center
-        %h1 LISTA DE VEHICULOS
-%span
-= Time.now.strftime('%B %d del %Y')
+= wicked_pdf_stylesheet_link_tag "pdf"
+= wicked_pdf_stylesheet_link_tag "bootstrap.min"
+.well
+  %table
+    %tr
+      %td= wicked_pdf_image_tag 'logo.png'
+      %td
+      %td
+      %td
+      %td
+      %td
+      %td
+        %center
+          %h1 LISTA DE VEHICULOS
+  %span
+    = Time.now.strftime('%B %d del %Y')
