se agrega el nuevo correo

--- a/app/views/admin/trucks/index.html.erb
+++ b/app/views/admin/trucks/index.html.erb
@@ -32,7 +32,7 @@
 
 <!--Tabla normal-->
 <!-- /.row-->
-<%= link_to 'Exportar pdf', export_admin_trucks_path(format: :pdf),  target: "_blank" %>
+<%= link_to 'Exportar pdf', admin_trucks_path(format: :pdf),  target: "_blank" %>
 <div class="row">
   <div id="tabla" class="col-lg-12">
     <%= render partial: 'resultTrucks' %>
