se agrega la respuesta despues de la compra

--- a/app/views/payments/respuesta.html.erb
+++ b/app/views/payments/respuesta.html.erb
@@ -18,7 +18,7 @@
             <label>Descripcion: </label>
             <%= @payment.description %>
             <br>
-            <label>Tarjeta: </label>
+            <label>Medio de pago: </label>
             <%= @payment.type_card %>
             <br>
             <label>Fecha: </label>
