--- a/app/views/includes/_admin_search.erb
+++ b/app/views/includes/_admin_search.erb
@@ -4,6 +4,6 @@
       <%= label_tag "isr",'Buscar:' %>
       <%= f.search_field (query_search_field.nil? ? :name_cont : query_search_field), class: "form-control form-el" %>
     </div>
-    <%= f.submit  'Buscar', class: 'btn btn-default' %>
+    <%= f.submit  'Buscar por nombre', class: 'btn btn-default' %>
 <% end %> 
 </div>
