--- a/app/views/layouts/footer_trucks.pdf.haml
+++ b/app/views/layouts/footer_trucks.pdf.haml
@@ -1,3 +1,3 @@
 %hr
 %center
-  = "Camion365.com - Todos los derechos reservados Copyright © #{Time.now.strftime('%Y')}"
+  = "Camion365.com - Todos los derechos reservados Copyright #{Time.now.strftime('%Y')}"
